# BobsOfExile

./: .EXAMPLEenv-client  .EXAMPLEenv-server  .gitignore  BobsOfExile-example.service  LICENSE  MAKE-PORTABLE.sh  POSSIBLE-TODO.txt  README.md  RUN-PORTABLE.sh  pyproject.toml
.tools/: Saved_console_cmds.txt
BobsOfExileMainBot/src/: COMMANDS_REGISTERS.py  Countdowns.py  EVENTS_REGISTERS.py  async_helpers.py  bot.py  bot_access.py  commands_helpers.py  common.py  events_helpers.py  host_stats_helpers.py  logs.py  main.py  platforms.py  primitive_helpers.py  python_helpers.py  string_helpers.py  tokens.py
BobsOfExilePowerBot/: requirements.txt
BobsOfExilePowerBot/src/: Cooldown.py  NonStockpilingScheduleTask.py  async_helpers.py  bot.py  bot_access.py  bot_activity.py  cfg.py  common.py  host_status_helpers.py  logs.py  main.py  primitive_helpers.py  python_helpers.py  tuya_helpers.py
src/bobsofexile/: async_convenience.py  bot.py  calls_convenience.py  clientpower.py  cmd_convenience.py  cmd_dangerous_instant_poweroff.py  cmd_debug_sendnetrequest.py  cmd_debug_setupsimplenetcodereplier.py  cmd_help.py  cmd_poweroff.py  cmd_poweron.py  cmd_powerstatus.py  cmd_servercmd.py  cmd_serverstart.py  cmd_serverview.py  cmd_test.py  cmd_testarg.py  cmd_testblocking.py  cmd_testerror.py  cmd_testpermissions.py  cmd_testping.py  cmd_testpowerdeviceconnection.py  cmd_testpowerdeviceconnectionrequest.py  cmd_teststream.py  commands.py  data.py  discord_convenience.py  discord_streaming_message.py  hardcoded.py  main.py  main_convenience.py  minecraft.py  networking.py  ranks.py  (+6 more)
(+18 files in other folders)
